solution/kubernetes/k8s-zwitscher-consul.yml
apiVersion: v1
kind: Service
metadata:
  name: zwitscher-consul
  labels:
    zwitscher: consul
spec:
  # use NodePort here to be able to access the port on each node
  type: NodePort
  ports:
  - port: 8500
  selector:
    zwitscher: consul
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zwitscher-consul
  labels:
    zwitscher: consul
    LAUNCHPAD_ENABLE: "true"
    LAUNCHPAD_COLOR: PURPLE
    LAUNCHPAD_ROW: "0"
spec:
  replicas: 1
  minReadySeconds: 30
  template:
    metadata:
      labels:
        zwitscher: consul
    spec:
      containers:
      - name: zwitscher-consul
        image: "consul"
        command: ["consul"]
        args: ["agent", "-server", "-ui", "-data-dir=/tmp/consul", "-bootstrap-expect=1", "-node=consul-server", "-client=0.0.0.0"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8500
        livenessProbe:
          httpGet:
            path: /v1/status/leader
            port: 8500
          initialDelaySeconds: 60
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /v1/status/leader
            port: 8500
          timeoutSeconds: 30
