solution/kubernetes/k8s-zwitscher-prometheus.yml
apiVersion: v1
kind: Service
metadata:
  name: zwitscher-prometheus
  labels:
    zwitscher: prometheus
spec:
  type: NodePort
  ports:
  - port: 9090
  selector:
    zwitscher: prometheus
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zwitscher-prometheus
  labels:
    zwitscher: prometheus
    LAUNCHPAD_ENABLE: "true"
    LAUNCHPAD_COLOR: ORANGE
    LAUNCHPAD_ROW: "3"
spec:
  replicas: 1
  minReadySeconds: 30
  template:
    metadata:
      labels:
        zwitscher: prometheus
    spec:
      containers:
      - name: zwitscher-prometheus
        image: "prom/prometheus"
        command: [ "/bin/prometheus" ]
        args: [ "-config.file=/prometheus-config/prometheus.yml", "-storage.local.path=/prometheus", "-web.console.libraries=/etc/prometheus/console_libraries", "-web.console.templates=/etc/prometheus/consoles" ]
        ports:
        - containerPort: 9090
        volumeMounts:
        - mountPath: /prometheus-config
          name: prometheus-config
        livenessProbe:
          httpGet:
            path: /
            port: 9090
          initialDelaySeconds: 90
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 9090
          timeoutSeconds: 30
      volumes:
        - name: prometheus-config
          hostPath:
            # directory location on host
            # for docker-toolbox, this means a location on the
            # virtual machine that the docker host runs on!
            path: /c/Users/USERNAME/prometheus-config
