solution/kubernetes/helloworld-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 8080
  selector:
    app: helloworld
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld
  labels:
    app: helloworld
    cloudcontrol.enabled: "true"
    cloudcontrol.index: "0"
    LAUNCHPAD_ENABLE: "true"
    LAUNCHPAD_COLOR: ORANGE
    LAUNCHPAD_ROW: "7"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
      namespace: default
    spec:
      containers:
      - name: helloworld
        image: giantswarm/helloworld:latest
        ports:
        - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: helloworld
  name: helloworld
  namespace: default
spec:
  backend:
    serviceName: helloworld
    servicePort: 8080
