solution/kubernetes/k8s-zwitscher-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zwitscher-service
  labels:
    zwitscher: service
spec:
  # use NodePort here to be able to access the port on each node
  type: NodePort
  ports:
  - port: 8080
  selector:
    zwitscher: service
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zwitscher-service
  labels:
    zwitscher: service
    cloudcontrol.enabled: "true"
    cloudcontrol.index: "4"
    LAUNCHPAD_ENABLE: "true"
    LAUNCHPAD_COLOR: LIGHT_GREEN
    LAUNCHPAD_ROW: "1"
spec:
  replicas: 2
  minReadySeconds: 10
  template:
    metadata:
      labels:
        zwitscher: service
    spec:
      containers:
      - name: zwitscher-service
        image: "hitchhikersguide/zwitscher-service:1.1.0"
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /admin/health
            port: 8080
          initialDelaySeconds: 90
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /admin/info
            port: 8080
          timeoutSeconds: 30
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    zwitscher: service
  name: zwitscher-service
  namespace: default
spec:
  backend:
    serviceName: zwitscher-service
    servicePort: 8080
